# CSC621-Rain-Group

./: customRegistration.cxx  readme.md  registrationExample.cxx  textfile
AlignmentClassInclude/: AffineRegistration.cpp  AffineRegistration.hh
Calculator/: CMakeLists.txt  CMakeLists.txt~  FinalProject.cxx  output1.mhd  output2.mhd  read.me
Calculator/lib/: AffineRegistration.cpp  AffineRegistration.hh  RegionGrowingNoThreshold.cxx  RegionGrowingNoThreshold.h  Registration.cpp  Registration.hh  Watershed.cxx  scAlign.hh  scCalc.cpp  scCalc.hh  scMain.cpp
ImageRegistrationRigid/: CMakeLists.txt  ImageRegistrationRigid.cxx
Registration-Affine-mha/: CMakeCache.txt  CMakeLists.txt  ImageRegistrationAffine.cxx  Makefile  cmake_install.cmake  output.mhd
Registration-Affine-mha/ImageRegistrationAffine.app/Contents/: Info.plist
examples/: CMakeLists.txt~
examples/rawio/: CMakeLists.txt~  rawio.cxx
examples/rawio2/: CMakeLists.txt  rawio2.cxx
examples/viewimage/: CMakeLists.txt  viewimage.cxx
kshen/: RegionGrowingSegmentation.cxx  SegmentationSimple.cxx
kshen/ResampleDICOM/: CMakeLists.txt
kshen/SegmentationExample/: SegmentationApp3d.cxx
kshen/mydata/: IM-0001-0001.dcm  IM-0001-0002.dcm  IM-0001-0003.dcm  IM-0001-0004.dcm  IM-0001-0005.dcm  IM-0001-0006.dcm  IM-0001-0007.dcm  IM-0001-0008.dcm  IM-0001-0009.dcm  IM-0001-0010.dcm  IM-0001-0011.dcm  IM-0001-0012.dcm  IM-0001-0013.dcm  IM-0001-0014.dcm  IM-0001-0015.dcm  IM-0001-0016.dcm  IM-0001-0017.dcm  IM-0001-0018.dcm  IM-0001-0019.dcm  IM-0001-0020.dcm  IM-0001-0021.dcm  IM-0001-0022.dcm  IM-0001-0023.dcm  IM-0001-0024.dcm  IM-0001-0025.dcm  IM-0001-0026.dcm  IM-0001-0027.dcm  IM-0001-0028.dcm  IM-0001-0029.dcm  IM-0001-0030.dcm  IM-0001-0031.dcm  IM-0001-0032.dcm  IM-0001-0033.dcm  IM-0001-0034.dcm  IM-0001-0035.dcm  IM-0001-0036.dcm  IM-0001-0037.dcm  IM-0001-0038.dcm  IM-0001-0039.dcm  IM-0001-0040.dcm  (+354 more)
kshen/rgrow/: CMakeLists.txt  RegionGrowing.cxx  RegionGrowing.h  RegionGrowingGUI.cxx  rgrow.cxx
kshen/rgrow/includes/: GLSliceView.h  SliceView.h  fltkCommandEvents.h  fltkGlWindow.h  fltkImage2DViewer.h  fltkImage2DViewer.txx  fltkImage2DViewerWindow.h  fltkImageViewer.h  fltkImageViewer.txx  fltkImageViewerGUI.h  fltkLightButton.h  fltkProgressBar.h  fltkUtils.h  fltkVTKImageViewer.h  fltkVTKImageViewer.txx  fltkVTKImageViewerBase.h  fltkVTKImageViewerGUI.h  fltkWidgetRedrawCommand.h  fltkWidgetRedrawCommand.txx  vtkKWImage.h  vtkRegistrationMonitor.h
kshen/rgrowGUI/: CMakeLists.txt  GUI.cxx  rgrowGUI.cxx
notes/: alignment.txt
segmentation/: CMakeLists.txt  ConnectedThresholdImageFilter.cxx  ConnectedThresholdImageFilterNoThreshold.cxx
src/: CMakeLists.txt  rain.cxx  reg.cxx
